src/test/ui/issues/issue-23122-1.stderr
error[E0275]: overflow evaluating the requirement `<GetNext<T> as Next>::Next == _`
  --> $DIR/issue-23122-1.rs:8:5
   |
LL |     type Next = <GetNext<T> as Next>::Next;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
